log

Thu 14 Mar 2024 03:12:05 PM UTC: 
 exercises.c | 46 ++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 42 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:3: error: statement with no effect [-Werror=unused-value]
   33 |   for (i; i < size; i++)
      |   ^~~
exercises.c:35:5: error: ‘arra’ undeclared (first use in this function); did you mean ‘arr’?
   35 |     arra[i] = arr[size - 1 - i];
      |     ^~~~
      |     arr
exercises.c:35:5: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:38:3: error: statement with no effect [-Werror=unused-value]
   38 |   for (i; i < size; i++))
      |   ^~~
exercises.c:38:25: error: expected statement before ‘)’ token
   38 |   for (i; i < size; i++))
      |                         ^
exercises.c: In function ‘checkSorted’:
exercises.c:73:3: error: statement with no effect [-Werror=unused-value]
   73 |   for (i; i < size; i++)
      |   ^~~
test.c: In function ‘reverseArray’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
50e15b8
Thu 14 Mar 2024 03:12:33 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:3: error: statement with no effect [-Werror=unused-value]
   33 |   for (i; i < size; i++)
      |   ^~~
exercises.c:38:3: error: statement with no effect [-Werror=unused-value]
   38 |   for (i; i < size; i++)
      |   ^~~
exercises.c: In function ‘checkSorted’:
exercises.c:73:3: error: statement with no effect [-Werror=unused-value]
   73 |   for (i; i < size; i++)
      |   ^~~
exercises.c:84:1: error: control reaches end of non-void function [-Werror=return-type]
   84 | }
      | ^
exercises.c: In function ‘reverseArray’:
exercises.c:33:13: error: ‘i’ is used uninitialized [-Werror=uninitialized]
   33 |   for (i; i < size; i++)
      |           ~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
fdb9ea6
Thu 14 Mar 2024 03:13:21 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:3: error: statement with no effect [-Werror=unused-value]
   33 |   for (i; i < size; i++)
      |   ^~~
exercises.c:38:3: error: statement with no effect [-Werror=unused-value]
   38 |   for (i; i < size; i++)
      |   ^~~
exercises.c: In function ‘checkSorted’:
exercises.c:73:3: error: statement with no effect [-Werror=unused-value]
   73 |   for (i; i < size; i++)
      |   ^~~
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f93f382
Thu 14 Mar 2024 03:13:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:3: error: statement with no effect [-Werror=unused-value]
   33 |   for (i; i < size; i++)
      |   ^~~
exercises.c:38:3: error: statement with no effect [-Werror=unused-value]
   38 |   for (i; i < size; i++)
      |   ^~~
exercises.c: In function ‘checkSorted’:
exercises.c:73:3: error: statement with no effect [-Werror=unused-value]
   73 |   for (i; i < size; i++)
      |   ^~~
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a47fbd3
Thu 14 Mar 2024 03:14:18 PM UTC: 
 exercises.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:73:3: error: statement with no effect [-Werror=unused-value]
   73 |   for (i; i < size; i++)
      |   ^~~
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6d1888f
Thu 14 Mar 2024 03:14:47 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c:23:1: error: expected identifier or ‘(’ before ‘}’ token
   23 | }
      | ^
exercises.c: In function ‘checkSorted’:
exercises.c:73:3: error: statement with no effect [-Werror=unused-value]
   73 |   for (i; i < size; i++)
      |   ^~~
exercises.c:82:1: error: control reaches end of non-void function [-Werror=return-type]
   82 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1924319
Thu 14 Mar 2024 03:15:06 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:73:3: error: statement with no effect [-Werror=unused-value]
   73 |   for (i; i < size; i++)
      |   ^~~
exercises.c:82:1: error: control reaches end of non-void function [-Werror=return-type]
   82 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fb07a2f
Thu 14 Mar 2024 03:16:41 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:82:1: error: control reaches end of non-void function [-Werror=return-type]
   82 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
804b565
Thu 14 Mar 2024 03:17:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘checkSorted’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dab2954
